# UCAS-Compiler-CACT

./: .gitignore  CMakeLists.txt  README.md
dependencies/antlr4-runtime/lib/: libantlr4-runtime.so.4.8
grammar/: CACT.g4  CACT.interp  CACTBaseListener.cpp  CACTBaseListener.h  CACTLexer.cpp  CACTLexer.h  CACTListener.cpp  CACTListener.h  CACTParser.cpp  CACTParser.h  code_build.sh
grammar/.antlr/: CACT.g4  CACT.interp  CACTLexer.cpp  CACTLexer.h  CACTLexer.interp  CACTLexer.tokens  CACTParser.cpp  CACTParser.h
grammar/.antlr/.antlr/: CACT.interp  CACTLexer.cpp  CACTLexer.h  CACTLexer.interp  CACTLexer.tokens  CACTParser.cpp  CACTParser.h
report/: PR001-实验报告.md  PR002-实验报告.md  PR003-实验报告.md
report/src/: constDecl.drawio
src/: IR.cpp  IR.h  main.cpp  riscv.cpp  riscv.h  semanticAnalysis.cpp  semanticAnalysis.h  symbolTable.cpp  symbolTable.h
